# openweer

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  DATA_LICENSE.md  Gemfile  LICENSE  README.md  SECURITY.md  docker-compose.yml
.claude/: launch.json
api/: .dockerignore  Dockerfile  README.md  pyproject.toml
api/scripts/: probe_harmonie.py
api/src/openweer/: __init__.py  _logging.py  settings.py
api/src/openweer/api/: __init__.py  __main__.py  _bbox.py  _errors.py  app.py  dependencies.py  security.py
api/src/openweer/devices/: __init__.py  __main__.py  apns.py  evaluator.py  models.py  repository.py  schema.py  worker.py
api/src/openweer/forecast/: __init__.py  observations.py  rain_2h.py  rain_harmonie.py  rain_history.py
api/src/openweer/ingest/: __init__.py  __main__.py  storage.py  worker.py
api/src/openweer/knmi/: __init__.py  _security.py  client.py  datasets.py  mqtt.py
api/tests/: conftest.py  test_api_chat.py  test_api_forecast.py  test_api_forecast_hourly.py  test_api_frames.py  test_api_health.py  test_api_rain.py  test_api_security.py  test_api_weather.py  test_chat_prompt.py  test_client.py  test_datasets.py  test_forecast_rain_2h.py  test_ingest_storage.py  test_ingest_worker.py  test_mqtt.py  test_rain_2h_multi.py  test_security.py  test_settings.py  test_tiler_colormap.py  test_tiler_harmonie_grib.py  test_tiler_manifest.py  test_tiler_pipeline_harmonie.py  test_tiler_radar_hdf5.py
api/tests/devices/: test_apns.py  test_evaluator.py  test_pusher_loop.py  test_repository.py  test_routes.py
(+245 files in other folders)
