[project]
name = "openweer"
version = "0.1.0"
description = "Open-source weather platform for the Netherlands, powered by KNMI open data."
readme = "../README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [{ name = "OpenWeer contributors" }]
dependencies = [
    "httpx[http2]>=0.28",
    "aiomqtt>=2.3",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "aiofiles>=25.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openweer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = ["error"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "RUF"]
ignore = ["S101"]  # asserts in tests are fine

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S106"]  # hardcoded passwords in tests are fine

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
